--- a/src/app/components/expenses/expenses.component.html
+++ b/src/app/components/expenses/expenses.component.html
@@ -79,7 +79,7 @@
                         <td>
                             <div class="action-buttons">
                                 <div class="btn-icon btn-edit">✏️</div>
-                                <div class="btn-icon btn-info">ℹ️</div>
+                                <div class="btn-icon btn-info">🗑️</div>
                             </div>
                         </td>
                     </tr>
