--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
       <div class="user-dropdown">
         <div class="user-icon"><i class="fas fa-user"></i></div>
         <div class="dropdown-menu">
-          <div class="dropdown-item" >Logout</div>
+          <div class="dropdown-item" (click)="logout()">Logout</div>
         </div>
       </div>
     </div>
