--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,4 @@
 <footer class="footer">
-    <p>Support: support&#64;basketball.org | Technical: tech&#64;basketball.org</p>
+    <p>Tehnička podrška: edi.miletic&#64;uniri.hr</p>
+    <p>© Copyright</p>
 </footer>
