--- a/src/app/components/games-assigned/rejection-modal/rejection-modal.component.scss
+++ b/src/app/components/games-assigned/rejection-modal/rejection-modal.component.scss
@@ -41,10 +41,10 @@
     align-items: center;
     gap: 0.5rem;
     
-    &::before {
-      content: "⚠️";
-      font-size: 1.1rem;
-    }
+    // &::before {
+    //   content: "⚠️";
+    //   font-size: 1.1rem;
+    // }
   }
 }
 
